fix: delete console.log, and all columns should be left-aligned

--- a/packages/neuron-ui/src/components/MultisigAddress/multisig-address.module.scss
+++ b/packages/neuron-ui/src/components/MultisigAddress/multisig-address.module.scss
@@ -41,10 +41,6 @@
     td {
       padding: 8px;
       min-width: 40px;
-      text-align: center;
-    }
-
-    .balance {
       text-align: left;
     }
   }
